--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build: ./python-app
     container_name: python-app
     restart: always
-    network_mode: host
+    # network_mode: host
     ports:
       - 5000:5000
 
@@ -18,7 +18,7 @@ services:
     ports:
       - 9090:9090
     restart: always
-    network_mode: host
+    # network_mode: host
 
 
   grafana:
@@ -27,9 +27,9 @@ services:
     ports:
       - 3000:3000
     environment:
-      - GF_SECURITY_ADMIN_PASSWORD=grafana
+      - GF_SECURITY_ADMIN_PASSWORD=admin
     depends_on:
       - prometheus
     restart: always
-    network_mode: host
+    # network_mode: host
 
